# rikdom

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  pyproject.toml  uv.toml
.claude/: CLAUDE.md
.codex/: SKILL.md
.github/: CODEOWNERS  dependabot.yml
agents/: README.md
data/: portfolio.json  sample_statement.csv
data-sample/: fx_rates.jsonl  policy.json  portfolio.json  snapshots.jsonl
design-system/: README.md  VERSION
docs/: calculation-trust.md  export-format.md  grounding-plan.md  migrations.md  native-multi-currency-engine.md  performance.md  plugin-compatibility.md  plugin-system.md  reconciliation-codes.md  schema-design.md  storage-durability.md  storage.md  visualization.md
plans/: rikdom-implementation-plan.md
plugins/: README.md
roadmap/: README.md
schema/: default-asset-types.json  plugin-statement.schema.json  policy.schema.json  portfolio.schema.json  snapshot.schema.json
scripts/: create_github_issues.py
tests/: test_account_id_wiring.py  test_activity_event_taxonomy.py  test_aggregate.py  test_aggregate_trust_records.py  test_asset_type_catalog_plugins.py  test_b3_consolidado_mensal_importer.py  test_b3_consolidado_mensal_plugin.py  test_backfill.py  test_btg_wm_conta_internacional_plugin.py  test_charles_schwab_plugin.py  test_cli_default_bootstrap.py  test_cli_import_statement.py  test_cli_migrate.py  test_cli_plugin_init.py  test_cli_quality_guardrails.py  test_cli_reconcile.py  test_cli_snapshot_fx.py  test_cli_validate_policy.py  test_cli_viz_aliases.py  test_cli_workspace.py  test_duckdb_storage_plugin.py  test_export_bundle.py  test_fidelity_plugin.py  test_fx.py  test_ghostfolio_export_json_plugin.py  test_ibkr_flex_xml_plugin.py  test_import_preflight.py  test_import_provenance.py  test_journal.py  test_migrations.py  test_output_plugin_pipeline.py  test_performance.py  test_plugins.py  (+18 more)
(+248 files in other folders)
